--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ dist: xenial
 
 script:
   - make
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code 0
-  - git ls-files test/ | xargs clang-format -i && git diff --exit-code 0
+  - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  - git ls-files test/ | xargs clang-format -i && git diff --exit-code
