--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ dist: xenial
 
 script:
   - make
+  - ./bin/test
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - git ls-files test/ | xargs clang-format -i && git diff --exit-code
